fixed: hardcoding of libdir and datadir in xbmc.sh.in
This fixes cases like libdir="/usr/lib64". This time make sure it works
even when libdir and datadir reference prefix and exec_prefix variables.

git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/trunk@30990 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/tools/Linux/xbmc.sh.in
+++ b/tools/Linux/xbmc.sh.in
@@ -19,7 +19,9 @@
 #  http://www.gnu.org/copyleft/gpl.html
 
 SAVED_ARGS="$@"
-LIBDIR="@prefix@/lib"
+prefix="@prefix@"
+exec_prefix="@exec_prefix@"
+LIBDIR="@libdir@"
 
 # Check for some options used by this script
 while [ "$#" -gt "0" ]
@@ -97,7 +99,7 @@ print_crash_report()
   echo "Crash report available at $FILE"
 }
 
-python @prefix@/share/xbmc/FEH.py "$SAVED_ARGS"
+python @datadir@/xbmc/FEH.py "$SAVED_ARGS"
 RET=$?
 if [ $RET -ne 0 ]; then
   exit $RET
