changed: Add GLES render system to win32 project for ease of finding code
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/trunk@31007 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/project/VS2008Express/XBMC.vcproj
+++ b/project/VS2008Express/XBMC.vcproj
@@ -5314,6 +5314,14 @@
 						RelativePath="..\..\xbmc\RenderSystemGL.h"
 						>
 					</File>
+					<File
+						RelativePath="..\..\xbmc\RenderSystemGLES.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\xbmc\RenderSystemGLES.h"
+						>
+					</File>
 				</Filter>
 			</Filter>
 			<Filter
