fixed: set datarootdir in xbmc.sh.in
datadir may be derived from datarootdir. Missing definition did not
cause issues as autoconf was expanding it itself as a backward
compatibility measure, while emitting a warning during configure.

git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/trunk@31018 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/tools/Linux/xbmc.sh.in
+++ b/tools/Linux/xbmc.sh.in
@@ -21,6 +21,7 @@
 SAVED_ARGS="$@"
 prefix="@prefix@"
 exec_prefix="@exec_prefix@"
+datarootdir="@datarootdir@"
 LIBDIR="@libdir@"
 
 # Check for some options used by this script
