fixed: obey LDFLAGS in some places where it was previously disregarded
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/trunk@31019 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/lib/libass/xbmc/Makefile.in
+++ b/lib/libass/xbmc/Makefile.in
@@ -20,7 +20,7 @@ $(SLIB): ../libass/.libs/libass.dylib
 	$(MAKE) -C ..
 else
 $(SLIB): ../libass/.libs/libass.so
-	$(CXX) -shared -fPIC -o $(SLIB) ../libass/.libs/*.o \
+	$(CXX) $(LDFLAGS) -shared -fPIC -o $(SLIB) ../libass/.libs/*.o \
 	  `cat ../../../xbmc/cores/DllLoader/exports/wrapper.def` \
 	  ../../../xbmc/cores/DllLoader/exports/wrapper.o
 
