--- a/xbmc/cores/paplayer/ADPCMCodec/Makefile.in
+++ b/xbmc/cores/paplayer/ADPCMCodec/Makefile.in
@@ -11,7 +11,7 @@ ifeq ($(findstring osx,$(ARCH)), osx)
 	../../../../tools/Mach5/wrapper.rb $@;mv output.so $@
 	chmod +x $@
 else
-	$(CC) $(CFLAGS) -shared -o $@ *.o `cat ../../DllLoader/exports/wrapper.def` ../../DllLoader/exports/wrapper.o
+	$(CC) $(CFLAGS) $(LDFLAGS) -shared -o $@ *.o `cat ../../DllLoader/exports/wrapper.def` ../../DllLoader/exports/wrapper.o
 endif
 
 include ../../../../Makefile.include
