--- a/xbmc/lib/libhdhomerun/Makefile.in
+++ b/xbmc/lib/libhdhomerun/Makefile.in
@@ -28,7 +28,7 @@ ifeq ($(findstring osx,$(ARCH)), osx)
 	../../../tools/Mach5/wrapper.rb $@;mv output.so $@
 	chmod +x $@
 else
-	$(CC) $(CFLAGS) $(OBJS) -shared -o $@ `cat ../../cores/DllLoader/exports/wrapper.def` \
+	$(CC) $(CFLAGS) $(LDFLAGS) $(OBJS) -shared -o $@ `cat ../../cores/DllLoader/exports/wrapper.def` \
 		../../cores/DllLoader/exports/wrapper.o
 endif
 	
