--- a/xbmc/lib/libPython/linux/Makefile.in
+++ b/xbmc/lib/libPython/linux/Makefile.in
@@ -94,13 +94,13 @@ endif
 
 ifneq (@USE_EXTERNAL_PYTHON@,1)
 $(SLIB): $(WRAPPER) $(WRAPPERDEF) $(PYWRAP) $(PYWRAPDEF) ../Python/libpython2.4.a
-	$(CC) -shared -o $@ -Wl,--whole-archive ../Python/libpython2.4.a \
+	$(CC) $(LDFLAGS) -shared -o $@ -Wl,--whole-archive ../Python/libpython2.4.a \
 		-Wl,--no-whole-archive `cat wrapper_python.def` wrapper_python.o \
 		`cat ../../../cores/DllLoader/exports/wrapper.def` \
 		../../../cores/DllLoader/exports/wrapper.o
 else
 $(SLIB): $(WRAPPER) $(WRAPPERDEF) $(PYWRAP) $(PYWRAPDEF)
-	$(CC) -shared -o $@ -Wl,--no-as-needed -l$(PYVERSION) \
+	$(CC) $(LDFLAGS) -shared -o $@ -Wl,--no-as-needed -l$(PYVERSION) \
 		`cat wrapper_python.def` wrapper_python.o \
 		`cat ../../../cores/DllLoader/exports/wrapper.def` \
 		../../../cores/DllLoader/exports/wrapper.o
