--- a/xbmc/screensavers/rsxs-0.9/xbmc/Makefile.in
+++ b/xbmc/screensavers/rsxs-0.9/xbmc/Makefile.in
@@ -30,7 +30,7 @@ ifeq ($(findstring osx,$(ARCH)), osx)
 		-mmacosx-version-min=10.4 -isysroot /Developer/SDKs/MacOSX10.4u.sdk \
 		-o $(SOLARWINDS-OUT) $(RSXS)/src/solarwinds/*.o $(RSXS-OBJS)
 else
-	$(CXX) $(CXXFLAGS) -shared -o $(SOLARWINDS-OUT) $(RSXS)/src/solarwinds/*.o $(RSXS-OBJS) -lXmu
+	$(CXX) $(CXXFLAGS) $(LDFLAGS) -shared -o $(SOLARWINDS-OUT) $(RSXS)/src/solarwinds/*.o $(RSXS-OBJS) -lXmu
 endif
 
 $(PLASMA-OUT): $(PLASMA-DEP)
@@ -39,7 +39,7 @@ ifeq ($(findstring osx,$(ARCH)), osx)
 		-mmacosx-version-min=10.4 -isysroot /Developer/SDKs/MacOSX10.4u.sdk \
 		-o $(PLASMA-OUT)     $(RSXS)/src/plasma/*.o     $(RSXS-OBJS)
 else
-	$(CXX) $(CXXFLAGS) -shared -o $(PLASMA-OUT)     $(RSXS)/src/plasma/*.o     $(RSXS-OBJS) -lXmu
+	$(CXX) $(CXXFLAGS) $(LDFLAGS) -shared -o $(PLASMA-OUT)     $(RSXS)/src/plasma/*.o     $(RSXS-OBJS) -lXmu
 endif
 
 $(EUPHORIA-OUT): $(EUPHORIA-DEP)
@@ -48,7 +48,7 @@ ifeq ($(findstring osx,$(ARCH)), osx)
 		-mmacosx-version-min=10.4 -isysroot /Developer/SDKs/MacOSX10.4u.sdk \
 		-o $(EUPHORIA-OUT)   $(RSXS)/src/euphoria/*.o   $(RSXS-OBJS)
 else
-	$(CXX) $(CXXFLAGS) -shared -o $(EUPHORIA-OUT)   $(RSXS)/src/euphoria/*.o   $(RSXS-OBJS) -lXmu
+	$(CXX) $(CXXFLAGS) $(LDFLAGS) -shared -o $(EUPHORIA-OUT)   $(RSXS)/src/euphoria/*.o   $(RSXS-OBJS) -lXmu
 endif
 
 $(SOLARWINDS-DEP) : $(RSXS)
