--- a/xbmc/cores/paplayer/vgmstream/Makefile.in
+++ b/xbmc/cores/paplayer/vgmstream/Makefile.in
@@ -79,6 +79,7 @@ META_OBJS=src/meta/aax.o \
           src/meta/gca.o \
           src/meta/gcsw.o \
           src/meta/genh.o \
+          src/meta/gsp_gsb.o \
           src/meta/halpst.o \
           src/meta/idsp.o \
           src/meta/ish_isd.o \
