remove duplicate lib/include paths using sort
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/trunk@31042 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/Makefile.include.in
+++ b/Makefile.include.in
@@ -29,7 +29,7 @@ CXX=@CXX@
 CC=@CC@
 CXXFLAGS+=@CXXFLAGS@
 CFLAGS+=@CFLAGS@
-INCLUDES+=@INCLUDES@
+INCLUDES+=$(sort @INCLUDES@)
 DEFINES+= \
 	-D_LINUX \
 	-D_FILE_DEFINED \
