fixed: Don't link libva if we don't have libva-glx.
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/trunk@31085 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/configure.in
+++ b/configure.in
@@ -868,9 +868,9 @@ if test "x$use_vaapi" != "xno"; then
     fi
   else
     initial_val=$use_vaapi
-    AC_CHECK_LIB([va], main,, use_vaapi=no)
+    AC_CHECK_LIB([va], main, :, use_vaapi=no)
     if test "x$use_vaapi" != "xno"; then
-      AC_CHECK_LIB([va-glx], main,, use_vaapi=no, -lva)
+      AC_CHECK_LIB([va-glx], main, LIBS="-lva -lva-glx $LIBS", use_vaapi=no, -lva)
     fi
 
     if test "x$use_vaapi" = "xno"; then
