prep for external librtmp, thanks spiff
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/trunk@31132 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/xbmc/DllPaths_generated.h.in
+++ b/xbmc/DllPaths_generated.h.in
@@ -30,6 +30,7 @@
 #define DLL_PATH_LIBHDHOMERUN  "special://xbmcbin/system/hdhomerun-@ARCH@.so"
 #define DLL_PATH_MEDIAINFO     "special://xbmcbin/system/mediainfo-@ARCH@.so"
 #define DLL_PATH_LIBCMYTH      "xbmc.so"
+#define DLL_PATH_LIBRTMP       "librtmp.so"
 
 #ifndef DLL_PATH_LIBCURL
 #ifdef __APPLE__
