fixed: VAAPI decoder was unavailable due to undefined HAVE_ macro
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/trunk@31148 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/configure.in
+++ b/configure.in
@@ -879,6 +879,8 @@ if test "x$use_vaapi" != "xno"; then
       else
         AC_MSG_RESULT($vaapi_not_found)
       fi
+    else
+      AC_DEFINE([HAVE_LIBVA], [1], [Define to 1 if you have the 'vaapi' libraries (-lva AND -lva-glx)])
     fi
   fi
 else
